# snasm

./: .gitignore  Cargo.toml
examples/: bar.S  foo.S  overlapping.S  redefinition.S
src/: error.rs  int.rs  lib.rs  link.rs  main.rs  obj.rs  rom.rs
src/asm/: dir.rs  mod.rs  tables.rs
src/assembler/: mod.rs  tables.rs
src/dis/: meta.rs  mod.rs
src/isa/: addressing.rs  instruction.rs  mnemonic.rs  mod.rs
src/syn/: atom.rs  code.rs  fmt.rs  grammar.pest  int.rs  mod.rs  operand.rs  parse.rs  src.rs
