[package]
name = "snasm"
version = "0.1.0"
authors = ["mcyoung"]
edition = "2018"

[dependencies]
regex = "1.3.7"
lazy_static = "1.4.0"
pest = "2.1.3"
pest_derive = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
json5 = "0.2.8"

# Force pest and serde to agree...
syn = "1.0.33"

structopt = "0.3.16"

[[bin]]
name = "snasm"
path = "src/main.rs"
doc = false